--- a/jogos.Ecommerce.Dominio/jogos.Ecommerce.Dominio.csproj
+++ b/jogos.Ecommerce.Dominio/jogos.Ecommerce.Dominio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FichaTecnica.cs" />
+    <Compile Include="Plataforma.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
