--- a/jogos.Ecommerce.Repositorios.Entity/jogos.Ecommerce.Repositorios.Entity.csproj
+++ b/jogos.Ecommerce.Repositorios.Entity/jogos.Ecommerce.Repositorios.Entity.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FichaTecnicaRepositorio.cs" />
+    <Compile Include="PlataformaRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
