--- a/jogos.Filmes.Dados.Entity/jogos.Ecommerce.Dados.Entity.csproj
+++ b/jogos.Filmes.Dados.Entity/jogos.Ecommerce.Dados.Entity.csproj
@@ -60,9 +60,18 @@
     <Compile Include="Migrations\202010260055164_MigracaoEmail.designer.cs">
       <DependentUpon>202010260055164_MigracaoEmail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011220410037_AdicaoPlataforma.cs" />
+    <Compile Include="Migrations\202011220410037_AdicaoPlataforma.designer.cs">
+      <DependentUpon>202011220410037_AdicaoPlataforma.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202011220534324_AdicaoFabricante.cs" />
+    <Compile Include="Migrations\202011220534324_AdicaoFabricante.designer.cs">
+      <DependentUpon>202011220534324_AdicaoFabricante.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeConfiguration\FichaTecnicaTypeConfiguration.cs" />
+    <Compile Include="TypeConfiguration\PlataformaTypeConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -84,6 +93,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010260055164_MigracaoEmail.resx">
       <DependentUpon>202010260055164_MigracaoEmail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011220410037_AdicaoPlataforma.resx">
+      <DependentUpon>202011220410037_AdicaoPlataforma.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011220534324_AdicaoFabricante.resx">
+      <DependentUpon>202011220534324_AdicaoFabricante.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
