--- a/jogos.Ecommerce.Web/jogos.Ecommerce.Web.csproj
+++ b/jogos.Ecommerce.Web/jogos.Ecommerce.Web.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\FichaTecnicaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlataformasController.cs" />
+    <Compile Include="Filtros\LogActionFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
